src/index.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap");

:root {
  font-family: "IBM Plex Sans Thai", sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: dark;
  color: #f5f5f5;
  background-color: #171717;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

button,
input,
select,
textarea {
  font-family: inherit;
}

body {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100dvh;
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 1rem 0;
}

.app-header {
  position: absolute;
  top: -1rem;
  right: 0;
  z-index: 10;
}

